update: Adicionado titulo de organização

--- a/src/components/Time/Time.css
+++ b/src/components/Time/Time.css
@@ -1,6 +1,7 @@
 .time{
   text-align: center;
   padding: 10px;
+  box-shadow: 2px 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
 .time .time-box{
   margin: 0 5px;
